Update translation - 103276444 (#3395) a27d3eced2a0df13f13d71032afa4e348c09e28a

--- a/es/industry-guidance/index.html
+++ b/es/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Guía para las industrias para reducir riesgos</h1>
           
-            <p class="small-text">Última actualización&nbsp;19 de febrero de 2021 a las 11:37 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;19 de febrero de 2021 a las 5:32 p. m.</p>
           
         </div>
       </div>
@@ -1935,12 +1935,12 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Escuelas: actualizado el 14 de enero de 2021</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Escuelas: actualizado el 19 de febrero de 2021</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>California actualizó la guía y el marco para reabrir las escuelas de jardín de niños a doceavo grado (K-12) para el aprendizaje en persona para el año escolar 2020-2021. Obtenga más información en <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">COVID-19 y el marco para la reapertura de la enseñanza en persona y la guía de salud pública para escuelas K-12 de California, año escolar 2020-2021 (PDF)</a>.</p>
+            <p>California actualizó la guía y el marco para reabrir las escuelas de jardín de niños a doceavo grado (K-12) para el aprendizaje en persona para el año escolar 2020-2021. Obtenga más información en la <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">guía y el marco para reabrir las escuelas K-12 (PDF)</a>. Consulte las <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">preguntas y respuestas</a> sobre la guía y el marco para reabrir las escuelas K-12.</p>
 <p> Las escuelas también deben seguir la <a href="/es/industry-guidance/#cohort-guidance">guía relacionada con las cohortes</a> de niños y jóvenes. Para deportes juveniles patrocinados por las escuelas, siga la <a href="/es/industry-guidance/#youthsports-guidance">guía para deportes juveniles</a>.</p>
 <p>Visite <a href="https://schools.covid19.ca.gov/">Escuelas seguras para todos</a> para obtener la información más reciente y recursos sobre COVID-19 y las escuelas.</p>
 
@@ -2069,13 +2069,13 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Siga esta <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">guía para deportes recreativos para jóvenes y adultos</a> tanto para interiores como para exteriores. Esta guía entrará en vigor el 26 de febrero de 2021. Muestra qué deportes se pueden volver a jugar y en qué niveles, según el nivel de contacto y el riesgo de transmisión de COVID-19.</p>
+            <p>Siga esta <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">guía para deportes recreativos para jóvenes y adultos</a> tanto para interiores como para exteriores. Esta guía entrará en vigor el 26 de febrero de 2021. Muestra qué deportes pueden volver a jugar en qué niveles, según el nivel de contacto y el riesgo de transmisión de la COVID-19.</p>
 <p>Esta guía se aplica a todos los deportes organizados para jóvenes, incluidos:</p>
 <ul><li>programas de escuelas K-12</li><li>programas recreativos patrocinados por la comunidad</li><li>clubes y ligas privados</li></ul>
 <p>Esta guía también se aplica a los adultos que practican deportes recreativos. No se aplica a los deportes universitarios o profesionales. </p>
 <p>A partir del 25 de enero de 2021, se pueden reanudar las competencias de algunos deportes.</p>
 <ul><li>Las competencias deben ser solo entre dos equipos.</li><li>No se permiten torneos fuera del estado.</li></ul>
-<p>Encuentre todos los detalles en la <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">guía para deportes recreativos para jóvenes y adultos</a> más reciente, que incluye las limitaciones para las competencias. </p>
+<p>Encuentre todos los detalles en la última <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">guía para deportes recreativos para jóvenes y adultos</a>, incluidas las limitaciones para competiciones. </p>
 <p>El Departamento de Salud Pública de California actualizará las <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">preguntas y respuestas</a> sobre los deportes para jóvenes y adultos.</p>
 
                   </div>
