--- a/ko/industry-guidance/index.html
+++ b/ko/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>위험 감소를 위한 업계 지침</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 19일 오전 11:37</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 19일 오후 5:32</p>
           
         </div>
       </div>
@@ -1935,12 +1935,12 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> 학교 – 2021년 1월 14일 업데이트</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> 학교 – 2021년 2월 19일 업데이트</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>California는 2020-2021년도 학년 유치원 및 초중고교 대상의 대면 수업 재개에 대한 지침과 체계를 업데이트하였습니다. <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">2020-2021 년도 학년 캘리포니아 내 유치원 및 초중고교에 대한 COVID-19와 대면 수업 재개 체계 및 공중 보건 지침(PDF)</a>에서 더 자세한 내용을 확인하십시오.</p>
+            <p>캘리포니아는 2020-2021 학년도 유치원 및 초중고교 대상의 대면 수업 재개에 대한 지침 및 체계를 업데이트하였습니다. 더 자세한 사항은 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">K-12 학교 수업 재개 관련 체계 및 지침(PDF)</a>에서 확인하십시오. K-12 학교 수업 재개 관련 체계 및 지침에 관한 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">질문과 답변</a>을 확인하십시오.</p>
 <p> 학교는 유아 및 청소년 <a href="/ko/industry-guidance/#cohort-guidance">집단 관련 지침</a>을 준수해야 합니다. 학교가 후원하는 청소년 스포츠의 경우 <a href="/ko/industry-guidance/#youthsports-guidance">청소년 스포츠에 대한 지침</a>을 준수하십시오.</p>
 <p>COVID-19와 학교에 관한 최신 정보와 자원을 확인하려면 <a href="https://schools.covid19.ca.gov/">모두에게 안전한 학교(Safe Schools for All)</a>를 방문하십시오.</p>
 
@@ -2069,12 +2069,12 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>실내외에서 모두 본 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">청소년 및 성인 레크리에이션 스포츠에 대한 지침</a>을 준수하십시오. 본 지침은 2021년 2월 26일 자로 시행됩니다. 이를 통해 COVID-19 접촉자와 전파 위험 수준에 근거하여 단계 별로 어떤 스포츠를 할 수 있는지를 확인할 수 있습니다.</p>
+            <p>실내 및 실외에서 모두 본 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">청소년 및 성인 레크리에이션 스포츠에 대한 지침</a>을 준수하십시오. 본 지침은 2021년 2월 26일 자로 시행됩니다. 이를 통해 COVID-19 접촉자와 전파 위험 수준에 근거하여 단계 별로 어떤 스포츠를 할 수 있는지를 확인할 수 있습니다.</p>
 <p>이 지침은 다음을 포함하여 모든 청소년 단체 스포츠에 적용됩니다:</p>
 <ul><li>K-12 학교 프로그램</li><li>지역사회 후원 레크리에이션 프로그램</li><li>사설 스포츠 클럽 및 단체</li></ul>
 <p>이 지침은 성인 오락용 레크리에이션 스포츠에도 적용됩니다. 대학이나 프로 스포츠는 이 지침의 적용 대상이 아닙니다. </p>
 <p>2021년 1월 25일 현재 일부 스포츠 시합을 재개할 수 있습니다.</p>
-<ul><li>시합은 두 팀에 한해 진행해야 합니다.</li><li>타주 토너먼트 시합은 허용되지 않습니다.</li></ul>
+<ul><li>시합은 두 팀에 한해 진행해야 합니다.</li><li>타주에서 하는 시합은 허용되지 않습니다.</li></ul>
 <p>모든 세부 내용은 시합에 대한 제한 사항을 포함하는 최신 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">청소년 및 성인 레크리에이션 스포츠에 대한 지침</a>에서 확인하십시오. </p>
 <p>캘리포니아 공공보건부는 청소년 및 성년 스포츠에 관한 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">질문과 응답</a>과 관련하여 새로운 내용을 제공할 예정입니다.</p>
 
