--- a/tl/industry-guidance/index.html
+++ b/tl/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Gabay sa industriya sa pagpapababa ng panganib</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 19, 2021 sa 11:37 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 19, 2021 sa 5:32 PM</p>
           
         </div>
       </div>
@@ -1935,12 +1935,12 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Mga paaralan – na-update noong Enero 14, 2021</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Mga paaralan – na-update noong Pebrero 19, 2021</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Na-update ng California ang gabay at framework para sa muling pagbubukas ng mga K-12 na paaralan para sa in-person na pag-aaral para sa taong panuruan 2020-2021. Matuto pa sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">Ang COVID-19 at Ang Framework ng Pagbubukas ng In-Person na Pagtuturo at Gabay sa Pampublikong Kalusugan para sa Mga K-12 na Paaralan sa California, Taong Panuruan 2020-2021 (PDF)</a>.</p>
+            <p>Na-update ng California ang gabay at framework para sa muling pagbubukas ng mga K-12 na paaralan para sa in-person na pag-aaral para sa taong panuruan 2020-2021. Matuto pa sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">Framework at gabay sa muling pagbubukas ng mga paaralang K-12 (PDF)</a>. Tingnan ang <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">mga tanong at sagot</a> tungkol sa framework at gabay sa muling pagbubukas ng mga paaralang K-12.</p>
 <p> Dapat ding sumunod ang mga paaralan sa <a href="/tl/industry-guidance/#cohort-guidance">gabay na nauugnay sa mga grupo</a> ng mga bata at kabataan. Para sa mga sponsored ng paaralan na youth sports, sundin ang <a href="/tl/industry-guidance/#youthsports-guidance">gabay para sa youth sports</a>.</p>
 <p>Bisitahin ang <a href="https://schools.covid19.ca.gov/">Safe Schools for All</a> para sa pinakabagong impormasyon at mga resource tungkol sa COVID-19 at mga paaralan.</p>
 
@@ -2046,7 +2046,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Nagbibigay ang gabay sa <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--tl.pdf">suporta para sa mga nagtatrabahong pamilya</a> ng impormasyong makakatulong sa iyong maghanap ng pangangalaga ng bata, maghanap ng tulong sa pagbabayad ng pangangalaga ng bata, at nag-uugnay sa iyo sa mga karagdagang suporta para sa iyong pamilya. Kasabay ng pag-aalis sa kautusang manatili sa bahay para sa mga karagdagang industriya para maisulong ang pagbangon ng ekonomiya ng California, tumitindi ang pangangailangan ng pangangalaga ng bata at iba pang suporta para sa mga nagtatrabahong pamilya.</p>
+            <p>Nagbibigay ang gabay sa <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--tl.pdf">suporta para sa mga nagtatrabahong pamilya</a> ng impormasyong makakatulong sa iyong maghanap ng pangangalaga ng bata, maghanap ng tulong sa pagbabayad ng pangangalaga ng bata, at nag-uugnay sa iyo sa mga karagdagang suporta para sa iyong pamilya. Kasabay ng pag-aalis sa utos na manatili sa bahay para sa mga karagdagang industriya para maisulong ang pagbangon ng ekonomiya ng California, tumitindi ang pangangailangan ng pangangalaga ng bata at iba pang suporta para sa mga nagtatrabahong pamilya.</p>
 
                   </div>
                 </div>
