--- a/vi/industry-guidance/index.html
+++ b/vi/industry-guidance/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hướng dẫn dành cho từng ngành nghề để giảm nhẹ rủi ro</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;19 tháng 2, 2021 lúc 11:37</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;19 tháng 2, 2021 lúc 17:32</p>
           
         </div>
       </div>
@@ -1937,12 +1937,12 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Các trường học – cập nhật ngày 14 tháng 1 năm 2021</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Các trường học – cập nhật ngày 19 tháng 2 năm 2021</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>California đã cập nhật hướng dẫn và khuôn khổ mở cửa trở lại các trường từ mẫu giáo đến lớp 12 để học trên lớp trong năm học 2020-2021. Hãy tìm hiểu thêm trong <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">COVID-19 và Khuôn Khổ Mở Cửa Trở Lại Giảng Dạy Trên Lớp & Hướng Dẫn Y Tế Công Cộng đối với các Trường K-12 tại California, Năm Học 2020-2021 (PDF)</a>.</p>
+            <p>California đã cập nhật hướng dẫn và khuôn khổ mở cửa trở lại các trường từ mẫu giáo đến lớp 12 để học trên lớp trong năm học 2020-2021. Tìm hiểu thêm trong <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">khuôn khổ và hướng dẫn mở cửa trở lại các trường từ mẫu giáo đến lớp 12 (PDF)</a>. Xem <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">các câu hỏi và giải đáp</a> về khuôn khổ và hướng dẫn mở cửa trở lại các trường từ mẫu giáo đến lớp 12.</p>
 <p> Các trường phải tuân thủ <a href="/vi/industry-guidance/#cohort-guidance">hướng dẫn liên quan đến các nhóm</a> trẻ em và thanh thiếu niên. Đối với các hoạt động thể thao dành cho thanh thiếu niên do nhà trường tài trợ, hãy tuân thủ <a href="/vi/industry-guidance/#youthsports-guidance">hướng dẫn về các hoạt động thể thao dành cho thanh thiếu niên</a>.</p>
 <p>Hãy truy cập <a href="https://schools.covid19.ca.gov/">Trường Học An Toàn Cho Mọi Người</a> để biết thông tin và tài nguyên mới nhất về đại dịch COVID-19 và các trường học.</p>
 
@@ -2048,7 +2048,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Hướng dẫn <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--vi.pdf">hỗ trợ cho các gia đình lao động</a> cung cấp thông tin để giúp quý vị xác định các địa điểm chăm sóc trẻ em, tìm kiếm sự trợ giúp để thanh toán cho các dịch vụ chăm sóc trẻ em và kết nối quý vị với các nguồn lực hỗ trợ bổ sung cho gia đình quý vị. Khi lệnh ở nhà được dỡ bỏ đối với một số ngành nghề khác để thúc đẩy khả năng phục hồi kinh tế của California, nhu cầu về dịch vụ chăm sóc trẻ em và hỗ trợ khác cho các gia đình lao động sẽ tăng lên.</p>
+            <p>Hướng dẫn <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--vi.pdf">hỗ trợ cho các gia đình lao động</a> cung cấp thông tin để giúp quý vị xác định các địa điểm chăm sóc trẻ em, tìm kiếm sự trợ giúp để thanh toán cho các dịch vụ chăm sóc trẻ em và kết nối quý vị với các nguồn lực hỗ trợ bổ sung cho gia đình quý vị. Khi lệnh ở nhà được dỡ bỏ đối với một số ngành nghề khác để thúc đẩy phục hồi kinh tế của California, nhu cầu về dịch vụ chăm sóc trẻ em và hỗ trợ khác cho các gia đình lao động sẽ tăng lên.</p>
 
                   </div>
                 </div>
