--- a/zh-hans/industry-guidance/index.html
+++ b/zh-hans/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有助于降低风险的行业指引</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月19日, 上午11:37</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月19日, 下午5:32</p>
           
         </div>
       </div>
@@ -1935,12 +1935,12 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> 学校 — 更新于2021年1月14日</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> 学校 — 更新于2021年2月19日</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>加州已更新2020至2021学年K-12学校重新开放面授教学的指引及规范。详情请参阅<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">为加州K-12学校提供的2020至2021学年COVID-19与重新开放面授教学规范及公共卫生指引 (PDF)</a>。</p>
+            <p>加州已更新2020至2021学年K-12学校重新开放面授教学的指引及规范。详情请参阅<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">K-12学校重新开放的规范及指引 (PDF)</a>。查看有关K-12学校重新开放的规范及指引的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">问题与解答</a>。</p>
 <p>学校亦须遵循儿童及青少年<a href="/zh-hans/industry-guidance/#cohort-guidance">群组相关指引</a>。学校赞助的青少年体育运动需遵循<a href="/zh-hans/industry-guidance/#youthsports-guidance">青少年体育运动指引</a>。</p>
 <p>请浏览<a href="https://schools.covid19.ca.gov/">全民安全校园</a>，了解有关COVID-19和学校的最新信息及资源。</p>
 
