--- a/ar/industry-guidance/index.html
+++ b/ar/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>التوجيهات الصناعية لخفض المخاطر</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;11:37 ص الساعة 19 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;5:32 م الساعة 19 فبراير 2021</p>
           
         </div>
       </div>
@@ -1935,12 +1935,12 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> المدارس - تم تحديثها في 14 يناير 2021</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> المدارس - تم تحديثها في 19 فبراير 2021</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>قامت كاليفورنيا بتحديث التوجيهات وإطار العمل لإعادة فتح المدارس من الحضانة وحتى الصف 12 للتعلم بالحضور الشخصي للعام الدراسي 2020-2021. تعرف على المزيد في <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">كوفيد-19 وإطار عمل إعادة فتح المدارس للتعلم بالحضور الشخصي وإرشادات الصحة العامة للمدارس من الحضانة وحتى الصف 12 في كاليفورنيا، العام الدراسي 2020-2021 (PDF)</a>.</p>
+            <p>قامت كاليفورنيا بتحديث التوجيهات وإطار العمل لإعادة فتح المدارس من الحضانة وحتى الصف 12 للتعلم بالحضور الشخصي للعام الدراسي 2020-2021. تعرف على المزيد في <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">التوجيهات وإطار عمل إعادة فتح المدارس من رياض الأطفال وحتى التعليم الثانوي (PDF)</a>. راجع <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">الأسئلة والأجوبة</a> حول توجيهات وإطار عمل إعادة فتح مدارس من الحضانة وحتى الصف 12.</p>
 <p> يجب على المدارس اتباع <a href="/ar/industry-guidance/#cohort-guidance">الإرشادات المتعلقة بفِرق</a> الأطفال والشباب. بالنسبة للرياضات الشبابية التي ترعاها المدرسة، اتبع <a href="/ar/industry-guidance/#youthsports-guidance">التوجيهات الخاصة بالرياضات الشبابية</a>.</p>
 <p>قم بزيارة <a href="https://schools.covid19.ca.gov/">Safe Schools for All</a> للحصول على أحدث المعلومات والموارد حول كوفيد-19 والمدارس.</p>
 
