--- a/zh-hant/industry-guidance/index.html
+++ b/zh-hant/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有助於降低風險的行業指引</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月19日, 上午11:37</p>
+            <p class="small-text">最近更新&nbsp;2021年2月19日, 下午5:32</p>
           
         </div>
       </div>
@@ -1935,12 +1935,12 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> 學校 — 更新於2021年1月14日</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> 學校 — 更新於2021年2月19日</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>加州已更新2020至2021學年K-12學校重新開放面授教學的指引及規範。詳情請參閱<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">為加州K-12學校提供的2020至2021學年COVID-19與重新開放面授教學規範及公共衛生指引 (PDF)</a>。</p>
+            <p>加州已更新2020至2021學年K-12學校重新開放面授教學的指引及規範。詳情請參閱<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">K-12學校重新開放的規範及指引 (PDF)</a>。查看有關K-12學校重新開放的規範及指引的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">問題與解答</a>。</p>
 <p>學校亦須遵循兒童及青少年<a href="/zh-hant/industry-guidance/#cohort-guidance">群組相關指引</a>。學校贊助的青少年體育運動需遵循<a href="/zh-hant/industry-guidance/#youthsports-guidance">青少年體育運動指引</a>。</p>
 <p>請瀏覽<a href="https://schools.covid19.ca.gov/">全民安全校園</a>，了解有關COVID-19和學校的最新資訊及資源。</p>
 
