Update page - vaccines.html e6e7d09bdb8102db39fd79f31a8c6086dd546264

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;February 23, 2021 at 7:27 AM</p>
+            <p class="small-text">Last updated&nbsp;February 23, 2021 at 7:50 AM</p>
           
         </div>
       </div>
@@ -216,7 +216,7 @@
 
 
 
-<div style="display:none;" class="js-qa js-qa-question">Who is getting COVID-19 vaccination now?</div>
+<div style="display:none;" class="js-qa js-qa-question">Who are getting COVID-19 vaccines now?</div>
 
 <div style="display:none;" class="js-qa js-qa-answer">See <a href="https://covid19.ca.gov/vaccines/#Who-can-get-vaccinated-now">Who can get vaccinated now</a> </div>
 
