Update translation - 103314782 (#3407) 0e85a912a8fe6d13cb1eb1551b8b747143fdc6fa

--- a/zh-hant/housing-and-homelessness/index.html
+++ b/zh-hant/housing-and-homelessness/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>住房與無家可歸者</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年1月29日, 下午5:32</p>
+            <p class="small-text">最近更新&nbsp;2021年2月22日, 下午12:26</p>
           
         </div>
       </div>
@@ -294,7 +294,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>可能會為您和您的家人提供一間汽車旅館房間或酒店房間。請聯絡當地無家可歸者</a>持續性護理機構<a href="https://www.bcsh.ca.gov/hcfc/documents/coc_poc.pdf">，以讓您獲得此服務。</a></p>
+            <p>可能會為您和您的家人提供一間汽車旅館房間或酒店房間。請聯絡當地無家可歸者<a href="https://www.bcsh.ca.gov/hcfc/documents/coc_poc.pdf">持續性護理機構</a>，以讓您獲得此服務。</p>
 
                   </div>
                 </div>
