--- a/ar/housing-and-homelessness/index.html
+++ b/ar/housing-and-homelessness/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الإسكان والتشرد</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;5:32 م الساعة 29 يناير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;12:26 م الساعة 22 فبراير 2021</p>
           
         </div>
       </div>
