--- a/tl/housing-and-homelessness/index.html
+++ b/tl/housing-and-homelessness/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pabahay at kawalan ng tirahan</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Enero 29, 2021 sa 5:32 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 22, 2021 sa 12:26 PM</p>
           
         </div>
       </div>
