--- a/zh-hans/latest-news/index.html
+++ b/zh-hans/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有关COVID-19的最新消息</h1>
           
-            <p class="small-text">最后更新时间&nbsp;February 23, 2021 at 11:41 AM</p>
+            <p class="small-text">最后更新时间&nbsp;February 23, 2021 at 12:02 PM</p>
           
         </div>
       </div>
