--- a/zh-hant/data-and-tools/index.html
+++ b/zh-hant/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>數據和工具</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月23日, 上午11:41</p>
+            <p class="small-text">最近更新&nbsp;2021年2月23日, 下午12:01</p>
           
         </div>
       </div>
