CCG-1615, Initial implementation.

--- a/pages/wordpress-posts/v2-state-dashboard.html
+++ b/pages/wordpress-posts/v2-state-dashboard.html
@@ -475,20 +475,22 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                   having a disproportionate number of deaths relative to their population.</p>
               </div>
               <!-- <div class="tableauPlaceholder"></div> -->
-              <div class="col-lg-6 col-md-6 col-sm-12">
-                <cagov-chart-dashboard-groups-gender-cases class="chart">
-                  <ul class="d-none">
-                    <li data-label="chartTitle">Confirmed cases by gender in California</li>
-                  </ul>
-                </cagov-chart-dashboard-groups-gender-cases>                
+              <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                  <cagov-chart-dashboard-groups-gender-cases class="chart">
+                    <ul class="d-none">
+                      <li data-label="chartTitle">Confirmed cases by gender in California</li>
+                    </ul>
+                  </cagov-chart-dashboard-groups-gender-cases>                
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                  <cagov-chart-dashboard-groups-gender-deaths class="chart">
+                    <ul class="d-none">
+                      <li data-label="chartTitle">Confirmed deaths by gender in California</li>
+                    </ul>
+                  </cagov-chart-dashboard-groups-gender-deaths>               
+                </div> 
               </div>
-              <div class="col-lg-6 col-md-6 col-sm-12">
-                <cagov-chart-dashboard-groups-gender-deaths class="chart">
-                  <ul class="d-none">
-                    <li data-label="chartTitle">Confirmed deaths by gender in California</li>
-                  </ul>
-                </cagov-chart-dashboard-groups-gender-deaths>               
-              </div> 
             </div>
           </div>
           <div id="age-graph" class="toggle-group-element" style="display:none">
@@ -499,20 +501,22 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                   have a disproportionate number of deaths.</p>
               </div>
               <!-- <div class="tableauPlaceholder"></div> -->
-              <div class="col-lg-6 col-md-6 col-sm-12">
-                <cagov-chart-dashboard-groups-age-cases class="chart">
-                  <ul class="d-none">
-                    <li data-label="chartTitle">Confirmed cases by age in California</li>
-                  </ul>
-                </cagov-chart-dashboard-groups-age-cases>                
+              <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                  <cagov-chart-dashboard-groups-age-cases class="chart">
+                    <ul class="d-none">
+                      <li data-label="chartTitle">Confirmed cases by age in California</li>
+                    </ul>
+                  </cagov-chart-dashboard-groups-age-cases>                
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                  <cagov-chart-dashboard-groups-age-deaths class="chart">
+                    <ul class="d-none">
+                      <li data-label="chartTitle">Confirmed deaths by age in California</li>
+                    </ul>
+                  </cagov-chart-dashboard-groups-age-deaths>               
+                </div> 
               </div>
-              <div class="col-lg-6 col-md-6 col-sm-12">
-                <cagov-chart-dashboard-groups-age-deaths class="chart">
-                  <ul class="d-none">
-                    <li data-label="chartTitle">Confirmed deaths by age in California</li>
-                  </ul>
-                </cagov-chart-dashboard-groups-age-deaths>               
-              </div> 
             </div>
           </div>
           <div id="ethnicity-graph" class="toggle-group-element">
