Update page - vaccines.html 6dfc5fca1642f012746980a6b573a300b3274eac

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;February 23, 2021 at 1:07 PM</p>
+            <p class="small-text">Last updated&nbsp;February 24, 2021 at 6:17 AM</p>
           
         </div>
       </div>
@@ -363,7 +363,7 @@
 
 
 
-<p class="js-qa js-qa-answer">After COVID-19 vaccination, you may have some side effects. These are normal signs that your body is building immunity. They include chills or tiredness, and may affect your ability to do daily activities, but they should go away in a few days. Learn more about <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/expect/after.html">what to expect after getting vaccinated.</a></p>
+<p class="js-qa js-qa-answer">After COVID-19 vaccination, you may have some side effects. These are normal signs that your body is building immunity. The most common side effects are pain and swelling in the arm where you received the shot. In addition, you may have fever, chills, tiredness, and headache. They may affect your ability to do daily activities, but they should go away in a few days. Learn more about <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/expect/after.html">what to expect after getting vaccinated.</a></p>
 
 
 
