--- a/data-and-tools/index.html
+++ b/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Data and tools</h1>
           
-            <p class="small-text">Last updated&nbsp;February 23, 2021 at 6:05 PM</p>
+            <p class="small-text">Last updated&nbsp;February 24, 2021 at 6:22 AM</p>
           
         </div>
       </div>
