--- a/latest-news/index.html
+++ b/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>News from the Governor&rsquo;s Office</h1>
           
-            <p class="small-text">Last updated&nbsp;February 23, 2021 at 6:05 PM</p>
+            <p class="small-text">Last updated&nbsp;February 24, 2021 at 6:23 AM</p>
           
         </div>
       </div>
