Update translation - 103393274 (#3414) 3e9a7ab6262ea5cafc58b0783e641934b430f64c

--- a/ar/food-resources/index.html
+++ b/ar/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الطعام والمساعدات الغذائية</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;11:59 ص الساعة 22 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;2:44 م الساعة 23 فبراير 2021</p>
           
         </div>
       </div>
@@ -317,7 +317,7 @@
 
 
 
-<p><strong>خط كاليفورنيا الساخن للاستفسار عن كوفيد-19: ‎833-422-4255</strong><a href="tel:[833-422-4255]"> (833-4CA-4ALL)</a></p>
+<p><strong>خط كاليفورنيا الساخن للاستفسار عن كوفيد-19:</strong><a href="tel:[833-422-4255]"> ‎833-422-4255  </a>(833-4CA-4ALL)</p>
 
 
 
