--- a/ko/food-resources/index.html
+++ b/ko/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>식품 및 식품 지원</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 22일 오전 11:59</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 23일 오후 2:44</p>
           
         </div>
       </div>
@@ -409,7 +409,7 @@
 
 
 
-<p>TaskRabbit을 통해 식품 배송, 약국 배송 등의 일상 필수품 배송 서비스를 바로 이용하실 수 있습니다. 노령자는 5% 할인을 받을 수 있습니다. <a href="https://www.taskrabbit.com/">TaskRabbit</a> 웹사이트를 방문하거나, <a href="https://apps.apple.com/app/id374165361" title="Apple App Store 내 Taskrabbit ">Apple App Store</a> 또는 <a href="https://play.google.com/store/apps/details?id=com.taskrabbit.droid.consumer" title="Google Play Store 내 Taskrabbit">Google Play Store</a>에서 스마트폰 무료 앱을 다운로드하십시오.</p>
+<p>TaskRabbit을 통해 식품 배송, 약국 배송 등의 일상 필수품 배송 서비스를 바로 이용하실 수 있습니다. 노령자는 5% 할인을 받을 수 있습니다. <a href="https://www.taskrabbit.com/">TaskRabbit</a> 웹사이트를 방문하거나, <a href="https://apps.apple.com/app/id374165361" title="Apple App Store 내 Taskrabbit">Apple App Store</a> 또는 <a href="https://play.google.com/store/apps/details?id=com.taskrabbit.droid.consumer" title="Google Play Store 내 Taskrabbit">Google Play Store</a>에서 스마트폰 무료 앱을 다운로드하십시오.</p>
 
 
 
