--- a/es/food-resources/index.html
+++ b/es/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Comida y asistencia alimentaria</h1>
           
-            <p class="small-text">Última actualización&nbsp;22 de febrero de 2021 a las 11:59 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;23 de febrero de 2021 a las 2:44 p. m.</p>
           
         </div>
       </div>
