--- a/tl/food-resources/index.html
+++ b/tl/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pagkain at tulong sa pagkain</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 22, 2021 sa 11:59 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 23, 2021 sa 2:44 PM</p>
           
         </div>
       </div>
