--- a/zh-hant/food-resources/index.html
+++ b/zh-hant/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>食品及食物援助</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月22日, 上午11:59</p>
+            <p class="small-text">最近更新&nbsp;2021年2月23日, 下午2:44</p>
           
         </div>
       </div>
