Update translation - 103341813 (#3424) f2465f7eda0308086dcaed752a904863b0e6a04d

--- a/ar/holidays/index.html
+++ b/ar/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الإجازات وكوفيد-19</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;2:55 م الساعة 17 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;4:57 م الساعة 22 فبراير 2021</p>
           
         </div>
       </div>
@@ -165,7 +165,7 @@
 
 
 
-<ul><li><strong><a href="#the-covid-chat">إجراء "دردشة كوفيد"</a></strong></li><li><strong><a href="#restrictions">تحقق من القيود في منطقتك</a></strong></li><li><strong><a href="#travel-advisory">إرشادات السفر</a></strong></li><li><strong><a href="#holiday-tips">نصائح لقضاء الإجازات بصحة أفضل</a></strong></li></ul>
+<ul><li><strong><a href="#the-covid-chat">إجراء "دردشة كوفيد"</a></strong></li><li><strong><a href="#restrictions">تحقق من القيود في منطقتك</a></strong></li><li><strong><a title="انظر قسم إرشادات السفر" href="#travel-advisory">إرشادات السفر</a></strong></li><li><strong><a href="#holiday-tips">نصائح لقضاء الإجازات بصحة أفضل</a></strong></li></ul>
 
 
 
@@ -217,7 +217,7 @@
 
 
 
-<p>للحصول على التفاصيل والمتطلبات الكاملة، اقرأ <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">إرشادات السفر</a> الصادرة عن إدارة الصحة العامة بولاية كاليفورنيا (CDPH) و <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">إرشادات الحجر الصحي لمرضى كوفيد-19</a>.</p>
+<p>للحصول على التفاصيل والمتطلبات الكاملة، اقرأ <a title="يُرجى قراءة نصائح السفر وتعليماته" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">إرشادات السفر</a> الصادرة عن إدارة الصحة العامة بولاية كاليفورنيا (CDPH) و <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">إرشادات الحجر الصحي لمرضى كوفيد-19</a>.</p>
 
 
 
