--- a/ko/holidays/index.html
+++ b/ko/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>휴일과 COVID-19</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 17일 오후 2:55</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 22일 오후 4:57</p>
           
         </div>
       </div>
@@ -165,7 +165,7 @@
 
 
 
-<ul><li><strong><a href="#the-covid-chat">"COVID 대화" 갖기</a></strong></li><li><strong><a href="#restrictions">해당 지역 내 제한 조치 확인</a></strong></li><li><strong><a href="#travel-advisory">여행 주의보</a></strong></li><li><strong><a href="#holiday-tips">더 건강하게 휴일을 지내기 위한 요령</a></strong></li></ul>
+<ul><li><strong><a href="#the-covid-chat">"COVID 대화" 갖기</a></strong></li><li><strong><a href="#restrictions">해당 지역 내 제한 조치 확인</a></strong></li><li><strong><a title="여행 주의보 관련 섹션 참조" href="#travel-advisory">여행 주의보</a></strong></li><li><strong><a href="#holiday-tips">더 건강하게 휴일을 지내기 위한 요령</a></strong></li></ul>
 
 
 
@@ -217,11 +217,11 @@
 
 
 
-<p>세부 사항 및 요건은 CDPH의 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">여행 주의보</a> 및 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19 격리 지침</a>에서 확인하십시오.</p>
+<p>세부 사항 및 요건은 CDPH의 <a title="여행 주의보 확인" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">여행 주의보</a> 및 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19 격리 지침</a>에서 확인하십시오.</p>
 
 
 
-<h2 id="holiday-tips">더 건강한 휴일을 지내기 위한 요령</h2>
+<h2 id="holiday-tips">더 건강하게 휴일을 지내기 위한 요령</h2>
 
 
 
