--- a/zh-hant/holidays/index.html
+++ b/zh-hant/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>節日與COVID-19</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月17日, 下午2:55</p>
+            <p class="small-text">最近更新&nbsp;2021年2月22日, 下午4:57</p>
           
         </div>
       </div>
@@ -165,7 +165,7 @@
 
 
 
-<ul><li><strong><a href="#the-covid-chat">進行「有關COVID的對話」</a></strong></li><li><strong><a href="#restrictions">查看當地限制</a></strong></li><li><strong><a href="#travel-advisory">出行建議</a></strong></li><li><strong><a href="#holiday-tips">有關度過更健康的節日的建議</a></strong></li></ul>
+<ul><li><strong><a href="#the-covid-chat">進行「有關COVID的對話」</a></strong></li><li><strong><a href="#restrictions">查看當地限制</a></strong></li><li><strong><a title="查閱出行建議章節" href="#travel-advisory">出行建議</a></strong></li><li><strong><a href="#holiday-tips">有關度過更健康的節日的建議</a></strong></li></ul>
 
 
 
@@ -217,7 +217,7 @@
 
 
 
-<p>如需了解完整細則及規定，請參閱CDPH發佈的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">出行建議</a>及<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19檢疫隔離指引</a>。</p>
+<p>如需了解完整細則及規定，請參閱CDPH發佈的<a title="查閱出行建議" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">出行建議</a>及<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19檢疫隔離指引</a>。</p>
 
 
 
