--- a/es/holidays/index.html
+++ b/es/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Las vacaciones y la COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;17 de febrero de 2021 a las 2:55 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;22 de febrero de 2021 a las 4:57 p. m.</p>
           
         </div>
       </div>
@@ -165,7 +165,7 @@
 
 
 
-<ul><li><strong><a href="#the-covid-chat">Tener “la charla de la COVID”.</a></strong></li><li><strong><a href="#restrictions">Consulte las restricciones de su área.</a></strong></li><li><strong><a href="#travel-advisory">Consejos de viaje.</a></strong></li><li><strong><a href="#holiday-tips">Consejos para festividades más saludables.</a></strong></li></ul>
+<ul><li><strong><a href="#the-covid-chat">Tener “la charla de la COVID”.</a></strong></li><li><strong><a href="#restrictions">Consulte las restricciones de su área.</a></strong></li><li><strong><a title="Consulte la sección de consejos de viaje." href="#travel-advisory">Consejos de viaje.</a></strong></li><li><strong><a href="#holiday-tips">Consejos para festividades más saludables.</a></strong></li></ul>
 
 
 
@@ -217,7 +217,7 @@
 
 
 
-<p>Lea los detalles y los requisitos completos en <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Consejos de viaje</a> y la<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">guía sobre la cuarentena de la COVID-19</a> del CDPH.</p>
+<p>Lea los detalles y los requisitos completos en <a title="Leer los consejos de viaje" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Consejos de viaje</a> y la<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">guía sobre la cuarentena de la COVID-19</a> del CDPH.</p>
 
 
 
