--- a/tl/holidays/index.html
+++ b/tl/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga Holiday at ang COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 17, 2021 sa 2:55 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 22, 2021 sa 4:57 PM</p>
           
         </div>
       </div>
@@ -165,7 +165,7 @@
 
 
 
-<ul><li><strong><a href="#the-covid-chat">Pagkakaroon ng "Pag-uusap tungkol sa COVID"</a></strong></li><li><strong><a href="#restrictions">Alamin ang mga paghihigpit sa iyong lugar</a></strong></li><li><strong><a href="#travel-advisory">Abiso sa paglalakbay</a></strong></li><li><strong><a href="#holiday-tips">Mga tip para sa mas malusog na holiday</a></strong></li></ul>
+<ul><li><strong><a href="#the-covid-chat">Pagkakaroon ng "Pag-uusap tungkol sa COVID"</a></strong></li><li><strong><a href="#restrictions">Alamin ang mga paghihigpit sa iyong lugar</a></strong></li><li><strong><a title="Tingnan ang seksyon tungkol sa Abiso sa paglalakbay" href="#travel-advisory">Abiso sa paglalakbay</a></strong></li><li><strong><a href="#holiday-tips">Mga tip para sa mas malusog na holiday</a></strong></li></ul>
 
 
 
@@ -217,7 +217,7 @@
 
 
 
-<p>Para sa mga kumpletong detalye at kinakailangan, basahin ang <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Abiso sa Pagbiyahe</a> at <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">Gabay sa Pag-quarantine para sa COVID-19</a> ng CDPH.</p>
+<p>Para sa mga kumpletong detalye at kinakailangan, basahin ang <a title="Basahin ang Abiso sa Paglalakbay" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Abiso sa Paglalakbay</a> at <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">Gabay sa Pag-quarantine para sa COVID-19</a> ng CDPH.</p>
 
 
 
