--- a/vi/holidays/index.html
+++ b/vi/holidays/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Ngày lễ và COVID-19</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;17 tháng 2, 2021 lúc 14:55</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;22 tháng 2, 2021 lúc 16:57</p>
           
         </div>
       </div>
@@ -167,7 +167,7 @@
 
 
 
-<ul><li><strong><a href="#the-covid-chat">Tổ chức chương trình “Trò chuyện thời COVID”</a></strong></li><li><strong><a href="#restrictions">Kiểm tra các hạn chế trong khu vực của quý vị</a></strong></li><li><strong><a href="#travel-advisory">Tư vấn đi lại</a></strong></li><li><strong><a href="#holiday-tips">Gợi ý cho các dịp lễ khỏe mạnh hơn</a></strong></li></ul>
+<ul><li><strong><a href="#the-covid-chat">Tổ chức chương trình “Trò chuyện thời COVID”</a></strong></li><li><strong><a href="#restrictions">Kiểm tra các hạn chế trong khu vực của quý vị</a></strong></li><li><strong><a title="Xem phần Tư vấn đi lại" href="#travel-advisory">Tư vấn đi lại</a></strong></li><li><strong><a href="#holiday-tips">Gợi ý cho các dịp lễ khỏe mạnh hơn</a></strong></li></ul>
 
 
 
@@ -219,7 +219,7 @@
 
 
 
-<p>Để biết thông tin chi tiết và yêu cầu đầy đủ, hãy đọc <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Tư Vấn Đi Lại</a> và <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">Hướng Dẫn Cách Ly Kiểm Dịch trong Đại Dịch COVID-19</a> của CDPH.</p>
+<p>Để biết thông tin chi tiết và yêu cầu đầy đủ, hãy đọc <a title="Đọc về Tư Vấn Đi Lại" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Tư Vấn Đi Lại</a> và <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">Hướng Dẫn Cách Ly Kiểm Dịch trong Đại Dịch COVID-19</a> của CDPH.</p>
 
 
 
