--- a/zh-hans/holidays/index.html
+++ b/zh-hans/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>节日与COVID-19</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月17日, 下午2:55</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月22日, 下午4:57</p>
           
         </div>
       </div>
@@ -165,7 +165,7 @@
 
 
 
-<ul><li><strong><a href="#the-covid-chat">进行“与COVID相关的交谈”</a></strong></li><li><strong><a href="#restrictions">查看当地限制</a></strong></li><li><strong><a href="#travel-advisory">出行建议</a></strong></li><li><strong><a href="#holiday-tips">有关度过更健康的节日的建议</a></strong></li></ul>
+<ul><li><strong><a href="#the-covid-chat">进行“与COVID相关的交谈”</a></strong></li><li><strong><a href="#restrictions">查看当地限制</a></strong></li><li><strong><a title="查看出行建议章节" href="#travel-advisory">出行建议</a></strong></li><li><strong><a href="#holiday-tips">有关度过更健康的节日的建议</a></strong></li></ul>
 
 
 
@@ -217,7 +217,7 @@
 
 
 
-<p>如需了解完整细则及规定，请参阅CDPH发布的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">出行建议</a>及<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19检疫隔离指引</a>。</p>
+<p>如需了解完整细则及规定，请参阅CDPH发布的<a title="查阅出行建议" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">出行建议</a>及<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19检疫隔离指引</a>。</p>
 
 
 
