Update page - guide-immigrant-californians.html e545211473e67c675c7314c5d82d1cf357185d76

--- a/guide-immigrant-californians/index.html
+++ b/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Help for immigrants</h1>
           
-            <p class="small-text">Last updated&nbsp;January 26, 2021 at 11:01 AM</p>
+            <p class="small-text">Last updated&nbsp;February 24, 2021 at 9:50 AM</p>
           
         </div>
       </div>
@@ -205,7 +205,7 @@
 
 
 
-<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">Know your basic rights</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">Create a family preparedness plan</a></li><li>Know your rights at work (available in <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">English</a>&nbsp;and&nbsp;<a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">Español</a>)</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">Rapid response numbers to report ICE activity</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">Legal help for individual immigration cases</a></li></ul>
+<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">Know your basic rights</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">Create a family preparedness plan</a></li><li>Know your rights at work (available as an <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">English flyer</a> and <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">Volante en español</a>)</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">Rapid response numbers to report ICE activity</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">Legal help for individual immigration cases</a></li></ul>
 
 
 
@@ -225,7 +225,7 @@
 
 
 
-<p>The Housing for the Harvest program offers temporary hotel housing to agricultural and food processing workers, including farm workers, who need to isolate due to COVID-19. This program gives exposed agricultural workers a place to stay and meals so they can protect their loved ones until they recover. </p>
+<p>The Housing for the Harvest program offers temporary hotel housing to agricultural and food processing workers, including farm workers, who need to isolate due to COVID-19. This program gives exposed agricultural workers a place to stay and meals so they can protect their loved ones until they recover.&nbsp;</p>
 
 
 
@@ -249,7 +249,7 @@
 
 
 
-<p>The <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Guide for Immigrant Californians (PDF)</a> will help you stay safe and informed. The guide may be updated over time.</p>
+<p>The <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">COVID-19 Guidance for Immigrant Californians (PDF)</a> will help you stay safe and informed. The guide may be updated over time.</p>
 
 
 
