Update page - guide-immigrant-californians.html e1a5717d4bc00168d9bdf73397d60715caeaa8bc

--- a/guide-immigrant-californians/index.html
+++ b/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Help for immigrants</h1>
           
-            <p class="small-text">Last updated&nbsp;February 24, 2021 at 9:50 AM</p>
+            <p class="small-text">Last updated&nbsp;February 24, 2021 at 11:23 AM</p>
           
         </div>
       </div>
@@ -205,7 +205,7 @@
 
 
 
-<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">Know your basic rights</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">Create a family preparedness plan</a></li><li>Know your rights at work (available as an <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">English flyer</a> and <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">Volante en español</a>)</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">Rapid response numbers to report ICE activity</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">Legal help for individual immigration cases</a></li></ul>
+<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">Know your basic rights</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">Create a family preparedness plan</a></li><li>Know your rights at work (available as an <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">English flyer</a> and a <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">Volante en español</a>)</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">Rapid response numbers to report ICE activity</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">Legal help for individual immigration cases</a></li></ul>
 
 
 
